--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#33000000"
-    tools:context="com.pixel.viewpagergallery.MainActivity">
+    tools:context="com.pixel.viewpagergallery.way1.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
