--- a/app/src/main/res/layout/activity_recycler.xml
+++ b/app/src/main/res/layout/activity_recycler.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pixel.viewpagergallery.RecyclerActivity">
+    tools:context="com.pixel.viewpagergallery.way3.RecyclerActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
