--- a/projectTest/src/main/res/layout/activity_main.xml
+++ b/projectTest/src/main/res/layout/activity_main.xml
@@ -94,6 +94,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_anchorGravity="bottom|end"
