--- a/projectTest/src/main/res/layout/item_device.xml
+++ b/projectTest/src/main/res/layout/item_device.xml
@@ -2,28 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
+    android:background="#dddddd"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:scaleType="center"
-        android:src="@mipmap/ic_launcher_round" />
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="8dp"
-        android:text="设备" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-    <Switch
-        android:id="@+id/switchView"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:textSize="12sp" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:scaleType="center"
+            android:src="@mipmap/ic_launcher_round" />
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="8dp"
+            android:text="房间" />
+
+        <Switch
+            android:id="@+id/switchView"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:checked="true"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <pixel.aylson.test.widget.SdListView
+        android:id="@+id/nestedListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
