--- a/projectTest/src/main/res/layout/child_view.xml
+++ b/projectTest/src/main/res/layout/child_view.xml
@@ -2,13 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="#DDDDDD"
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#DDDDDD"
+        android:layout_weight="1"
         android:padding="16dp"
         android:text="child" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:focusable="false" />
 </LinearLayout>
