--- a/projectTest/src/main/res/layout/item_device.xml
+++ b/projectTest/src/main/res/layout/item_device.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
     android:background="#dddddd"
     android:gravity="center_vertical"
     android:orientation="vertical"
@@ -16,10 +17,10 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:scaleType="center"
-            android:src="@mipmap/ic_launcher_round" />
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_arrow" />
 
         <TextView
             android:id="@+id/text"
@@ -29,16 +30,16 @@
             android:padding="8dp"
             android:text="房间" />
 
-        <Switch
-            android:id="@+id/switchView"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:checked="true"
-            android:textSize="12sp" />
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3" />
     </LinearLayout>
 
     <pixel.aylson.test.widget.SdListView
         android:id="@+id/nestedListView"
+        style="@style/popup_animation_below"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
