--- a/projectTest/src/main/res/layout/sirt_view.xml
+++ b/projectTest/src/main/res/layout/sirt_view.xml
@@ -15,7 +15,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:padding="16dp"
-            android:text="长按设备排序" />
+            android:text="设备管理" />
 
         <Button
             android:id="@+id/completeButton"
