--- a/projectTest/src/main/res/layout/sort_item.xml
+++ b/projectTest/src/main/res/layout/sort_item.xml
@@ -4,12 +4,12 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:gravity="center_vertical"
-    android:padding="4dp">
+    android:padding="8dp">
 
     <View
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@mipmap/ic_launcher_round" />
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="@mipmap/ic_delete" />
 
     <TextView
         android:id="@+id/text"
@@ -23,6 +23,6 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:background="@mipmap/ic_drag"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </LinearLayout>
