--- a/projectTest/src/main/res/layout/activity_home.xml
+++ b/projectTest/src/main/res/layout/activity_home.xml
@@ -21,33 +21,37 @@
         app:tabBackground="@color/colorE"
         app:tabGravity="fill"
         app:tabIndicatorColor="@android:color/holo_blue_dark"
-        app:tabIndicatorHeight="0dp"
+        app:tabIndicatorHeight="1dp"
         app:tabSelectedTextColor="@android:color/holo_blue_dark"
         app:tabTextAppearance="@android:style/TextAppearance.Holo.Small"
         app:tabTextColor="@android:color/holo_green_dark">
 
-        <!--<android.support.design.widget.TabItem-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:icon="@mipmap/ic_launcher"-->
-        <!--android:text="主页" />-->
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@mipmap/ic_launcher"
+            android:tag="0"
+            android:text="主页" />
 
-        <!--<android.support.design.widget.TabItem-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:icon="@mipmap/ic_launcher"-->
-        <!--android:text="房间" />-->
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@mipmap/ic_launcher"
+            android:tag="1"
+            android:text="房间" />
 
-        <!--<android.support.design.widget.TabItem-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:icon="@mipmap/ic_launcher"-->
-        <!--android:text="发现" />-->
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@mipmap/ic_launcher"
+            android:tag="2"
+            android:text="发现" />
 
-        <!--<android.support.design.widget.TabItem-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:icon="@mipmap/ic_launcher"-->
-        <!--android:text="设置" />-->
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@mipmap/ic_launcher"
+            android:tag="3"
+            android:text="设置" />
     </android.support.design.widget.TabLayout>
 </LinearLayout>
